Trying to use a position of bottom on fixed elements to see if that stops the 'jumping' issues when scrolling.

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -566,7 +566,8 @@ h2 {
 /* this doesn't really rely on js as much as it does css */
 .fixed {
   position: fixed!important;
-  top: 0;
+  top: auto!important;
+  bottom: 0;
   }
 .slideshow.full.shutter {
   }
